# pdf_extractor

./: .gitignore  AGENTS.md  README.md  User_Guide.md  pyproject.toml  requirements.txt
examples/: AR-HASE-llm-cell.json  AR-HASE.json  AR-HSBC.json  AR-SC.json  example_rule.json  generate_sample_pdf.py  output-llm-cell.json  run_extract.py  sample_rule.json
pdf_extractor/: __init__.py
pdf_extractor/extractor/: __init__.py  llm_extractor.py  table_cell_extractor.py  table_extractor.py  text_extractor.py  value_extractor.py
pdf_extractor/indexer/: __init__.py  fts_indexer.py
pdf_extractor/models/: __init__.py  document.py  result.py
pdf_extractor/parser/: __init__.py  paragraph_builder.py  pdf_parser.py  section_detector.py
pdf_extractor/rules/: __init__.py  rule_executor.py  rule_loader.py  rule_schema.py
pdf_extractor/utils/: __init__.py  bbox.py  llm_connection.py  logging.py  show_table_structure.py  show_toc.py  text.py
rule_studio/: __init__.py  app.py  services.py
rule_studio/components/pdf_wheel_viewer/: index.html
tests/: __init__.py  test_cli.py  test_complex_tables.py  test_environment.py  test_fts_indexer.py  test_models.py  test_pdf_parser.py  test_rule_studio_app.py  test_rule_studio_services.py  test_rules_and_extractors.py  test_show_table_structure.py  test_show_toc.py  test_text_utils.py
